QIde-core/java_parser.output
Nonterminals useless in grammar

    var_store
    type_save
    range_for_statement


Terminals unused in grammar

    "instanceof"
    "public"
    "private"
    "protected"


Rules useless in grammar

  264 var_store: var

  265 type_save: type

  266 range_for_statement: "for" '(' type "identifier" ':' val ')' conditional_body
  267                    | "for" '(' error ')' conditional_body


Grammar

    0 $accept: start "end of file"

    1 start: main_program

    2 nested_id: "identifier" '.' nested_id
    3          | "identifier"

    4 opt_var_access: '.' var
    5               | ε

    6 $@1: ε

    7 var: "identifier" $@1 opt_array opt_var_access

    8 var_load: var

    9 type: nested_id opt_array_type

   10 opt_array_type: "[]" opt_array_type
   11               | ε

   12 opt_array: '[' expression ']' opt_array
   13          | ε

   14 equality_operator: "=="
   15                  | "!="

   16 order_operator: '<'
   17               | '>'
   18               | "<="
   19               | ">="

   20 shift_operator: ">>>"
   21               | "<<"
   22               | ">>"

   23 multiplicative_operator: '*'
   24                        | '/'
   25                        | '%'

   26 additive_operator: '+'
   27                  | '-'

   28 logical_operator: "&&"
   29                 | "||"

   30 bitwise_operator: '&'
   31                 | '^'
   32                 | '|'

   33 binary_operator: equality_operator
   34                | order_operator
   35                | shift_operator
   36                | logical_operator
   37                | bitwise_operator
   38                | additive_operator
   39                | multiplicative_operator

   40 unary_operator: '!'
   41               | '+'
   42               | '-'
   43               | '~'

   44 opt_unary_operator: unary_operator
   45                   | ε

   46 unary_special_operator: "++"
   47                       | "--"

   48 $@2: ε

   49 $@3: ε

   50 fn_call: var $@2 '(' args ')' $@3 opt_array

   51 opt_var_fn_access: '.' var_fn
   52                  | ε

   53 var_fn: var_load
   54       | fn_call opt_var_fn_access

   55 val: var_fn
   56    | "true"
   57    | "false"
   58    | INTEGER
   59    | REAL
   60    | CHARACTER
   61    | "string" opt_string_access

   62 opt_string_access: '.' var_fn
   63                  | ε

   64 assignment_operator: '='
   65                    | SELF_UNSIGNED_RIGHT_SHIFT
   66                    | SELF_RIGHT_SHIFT
   67                    | SELF_LEFT_SHIFT
   68                    | SELF_PLUS
   69                    | SELF_MINUS
   70                    | SELF_TIMES
   71                    | SELF_DIV
   72                    | SELF_MOD
   73                    | SELF_BITWISE_AND
   74                    | SELF_BITWISE_OR
   75                    | SELF_BITWISE_XOR

   76 expression: disjunctive_expression

   77 unary_expression: opt_unary_operator val
   78                 | opt_unary_operator '(' disjunctive_expression ')' opt_array

   79 multiplicative_expression: multiplicative_expression multiplicative_operator unary_expression
   80                          | unary_expression

   81 additive_expression: additive_expression additive_operator multiplicative_expression
   82                    | multiplicative_expression

   83 relational_expression: relational_expression order_operator additive_expression
   84                      | additive_expression

   85 equality_expression: equality_expression equality_operator relational_expression
   86                    | relational_expression

   87 conjunctive_expression: conjunctive_expression "&&" equality_expression
   88                       | equality_expression

   89 disjunctive_expression: disjunctive_expression "||" conjunctive_expression
   90                       | conjunctive_expression

   91 $@4: ε

   92 statement_s0: "identifier" $@4 statement_s1
   93             | '(' expression ')' opt_array
   94             | new_expression
   95             | unary_special_operator var

   96 statement_s1: var_declarations

   97 $@5: ε

   98 statement_s1: '.' "identifier" $@5 statement_s1
   99             | '[' expression ']' opt_array statement_s2
  100             | "[]" var_declarations

  101 $@6: ε

  102 $@7: ε

  103 statement_s1: '(' $@6 args $@7 ')' opt_array statement_s2
  104             | assignment
  105             | binary_operator expression
  106             | unary_special_operator
  107             | ε

  108 rhs: assignment
  109    | binary_operator expression

  110 statement_s2: '.' val rhs
  111             | rhs
  112             | ε

  113 new_expression: "new" nested_id new_initialisation

  114 new_initialisation: '(' args ')'
  115                   | '[' expression ']' opt_array opt_array_type
  116                   | "[]" opt_array_type '{' args '}'

  117 assignable_expression: new_expression
  118                      | expression

  119 obligatory_args: assignable_expression

  120 $@8: ε

  121 obligatory_args: assignable_expression $@8 ',' obligatory_args

  122 args: obligatory_args
  123     | ε

  124 opt_variadic: ","
  125             | ε

  126 $@9: ε

  127 obligatory_formal_args: type "identifier" opt_array_type $@9 ',' obligatory_formal_args
  128                       | type "identifier" opt_array_type opt_variadic

  129 formal_args: obligatory_formal_args
  130            | ε

  131 opt_assignment: '=' assignable_expression
  132               | ε

  133 $@10: ε

  134 $@11: ε

  135 var_declaration_body: "identifier" $@10 opt_array_type $@11 opt_assignment

  136 var_declarations: var_declarations ',' var_declaration_body
  137                 | var_declaration_body

  138 $@12: ε

  139 statement_declarative: type $@12 var_declarations

  140 $@13: ε

  141 assignment: assignment_operator $@13 expression
  142           | '=' new_expression

  143 assignment_statement: var assignment

  144 statement_pm_1: unary_special_operator var
  145               | var unary_special_operator

  146 statement: statement_s0 ';'
  147          | for_statement
  148          | if_statement
  149          | while_statement
  150          | do_while_statement
  151          | switch_statement
  152          | return_statement ';'
  153          | ';'
  154          | error ';'

  155 opt_statement_seq: statement_seq
  156                  | ε

  157 statement_seq: statement opt_statement_seq
  158              | block opt_statement_seq

  159 block: opening_bracket opt_statement_seq closing_bracket

  160 condition: expression

  161 conditional_body: statement
  162                 | block

  163 opt_else_statement: "else" conditional_body
  164                   | ε

  165 $@14: ε

  166 $@15: ε

  167 if_statement: "if" '(' condition ')' $@14 conditional_body $@15 opt_else_statement
  168             | "if" '(' error ')' conditional_body opt_else_statement

  169 for_updating_statement: statement_pm_1
  170                       | assignment_statement

  171 $@16: ε

  172 $@17: ε

  173 $@18: ε

  174 $@19: ε

  175 for_statement: "for" $@16 '(' statement_declarative ';' $@17 condition ';' $@18 for_updating_statement ')' $@19 conditional_body

  176 $@20: ε

  177 $@21: ε

  178 while_statement: "while" $@20 '(' condition ')' $@21 conditional_body

  179 $@22: ε

  180 do_while_statement: "do" $@22 block "while" '(' condition ')' ';'

  181 switch_statement: "switch" '(' condition ')' '{' switch_body '}'

  182 case_val: INTEGER
  183         | "true"
  184         | "false"
  185         | CHARACTER

  186 switch_label: "case" case_val
  187             | "default"

  188 case_block: switch_label ':' opt_statement_seq

  189 switch_body: case_block switch_body
  190            | ε

  191 opt_return_expression: new_expression
  192                      | expression
  193                      | ε

  194 return_statement: "return" opt_return_expression

  195 cls_modifier: PUBLIC
  196             | ε

  197 $@23: ε

  198 cls_attr_more: ',' "identifier" $@23 opt_assignment cls_attr_more
  199              | ';'
  200              | error ';'

  201 $@24: ε

  202 cls_attr_sign: opt_assignment $@24 cls_attr_more

  203 $@25: ε

  204 $@26: ε

  205 cls_attr_sign: '(' $@25 formal_args ')' $@26 block
  206              | '(' error ')' block

  207 fn_access_modifier: PRIVATE
  208                   | PUBLIC
  209                   | PROTECTED

  210 fn_static_modifier: "static"

  211 fn_opt_static_modifier: fn_static_modifier
  212                       | ε

  213 fn_opt_access_modifier: fn_access_modifier
  214                       | ε

  215 fn_modifier: fn_access_modifier fn_opt_static_modifier
  216            | fn_static_modifier fn_opt_access_modifier
  217            | ε

  218 fn_declaration: fn_modifier type "identifier" '(' formal_args ')'
  219               | fn_modifier type "identifier" '(' error ')'

  220 cls_declaration: cls_modifier "class" "identifier"
  221                | cls_modifier "class" error

  222 cls_info_opt_more: cls_info
  223                  | ε

  224 cls_info: "abstract" fn_declaration ';' cls_info_opt_more

  225 $@27: ε

  226 cls_info: fn_modifier type "identifier" $@27 cls_attr_sign cls_info_opt_more
  227         | ';' cls_info_opt_more

  228 opt_cls_info: cls_info
  229             | ε

  230 opt_extends: "extends" nested_id
  231            | ε

  232 more_interface_list: ',' interface_list
  233                    | ε

  234 interface_list: nested_id more_interface_list

  235 opt_implements: "implements" interface_list
  236               | ε

  237 opening_bracket: '{'

  238 closing_bracket: '}'

  239 cls_definition: cls_declaration opt_extends opt_implements opening_bracket opt_cls_info closing_bracket
  240               | cls_declaration error '{' opt_cls_info '}'

  241 opt_abstract: "abstract"
  242             | ε

  243 interface_info: opt_abstract fn_declaration ';' interface_info
  244               | ';'
  245               | error ';'
  246               | error block

  247 opt_interface_info: interface_info
  248                   | ε

  249 interface_declaration: cls_modifier "interface" "identifier"
  250                      | cls_modifier "interface" error

  251 opt_interface_extends: "extends" interface_list
  252                      | ε

  253 interface_definition: interface_declaration opt_interface_extends '{' opt_interface_info '}'
  254                     | interface_declaration error '{' opt_interface_info '}'

  255 opt_pkg_declaration: "package" nested_id ';'
  256                    | ε

  257 pkg_import: "import" nested_id ';' pkg_import
  258           | ε

  259 type_definitions: interface_definition type_definitions_more
  260                 | cls_definition type_definitions_more

  261 type_definitions_more: type_definitions
  262                      | ε

  263 main_program: opt_pkg_declaration pkg_import type_definitions


Terminals, with rules where they appear

    "end of file" (0) 0
    '!' (33) 40
    '%' (37) 25
    '&' (38) 30
    '(' (40) 50 78 93 103 114 167 168 175 178 180 181 205 206 218 219
    ')' (41) 50 78 93 103 114 167 168 175 178 180 181 205 206 218 219
    '*' (42) 23
    '+' (43) 26 41
    ',' (44) 121 127 136 198 232
    '-' (45) 27 42
    '.' (46) 2 4 51 62 98 110
    '/' (47) 24
    ':' (58) 188
    ';' (59) 146 152 153 154 175 180 199 200 224 227 243 244 245 255 257
    '<' (60) 16
    '=' (61) 64 131 142
    '>' (62) 17
    '[' (91) 12 99 115
    ']' (93) 12 99 115
    '^' (94) 31
    '{' (123) 116 181 237 240 253 254
    '|' (124) 32
    '}' (125) 116 181 238 240 253 254
    '~' (126) 43
    error (256) 154 168 200 206 219 221 240 245 246 250 254
    "identifier" <text> (258) 2 3 7 92 98 127 128 135 198 218 219 220 226 249
    CHARACTER <character> (259) 60 185
    "string" <text> (260) 61
    INTEGER <num> (261) 58 182
    REAL <real> (262) 59
    "++" (263) 46
    "--" (264) 47
    "class" (265) 220 221
    "[]" (266) 10 100 116
    "return" (267) 194
    "interface" (268) 249 250
    "abstract" (269) 224 241
    "static" (270) 210
    "extends" (271) 230 251
    "implements" (272) 235
    "if" (273) 167 168
    "else" (274) 163
    "for" (275) 175
    "while" (276) 178 180
    "do" (277) 180
    "switch" (278) 181
    "case" (279) 186
    "default" (280) 187
    "<<" (281) 21
    ">>" (282) 22
    ">>>" (283) 20
    "<=" (284) 18
    ">=" (285) 19
    "!=" (286) 15
    "==" (287) 14
    SELF_UNSIGNED_RIGHT_SHIFT (288) 65
    SELF_LEFT_SHIFT (289) 67
    SELF_RIGHT_SHIFT (290) 66
    "instanceof" (291)
    "," (292) 124
    "new" (293) 113
    "&&" (294) 28 87
    "||" (295) 29 89
    "true" (296) 56 183
    "false" (297) 57 184
    "package" (298) 255
    "import" (299) 257
    SELF_PLUS (300) 68
    SELF_MINUS (301) 69
    SELF_DIV (302) 71
    SELF_MOD (303) 72
    SELF_TIMES (304) 70
    SELF_BITWISE_AND (305) 73
    SELF_BITWISE_OR (306) 74
    SELF_BITWISE_XOR (307) 75
    LOWEST (308)
    PUBLIC (309) 195 208
    "public" (310)
    PRIVATE (311) 207
    "private" (312)
    PROTECTED (313) 209
    "protected" (314)


Nonterminals, with rules where they appear

    $accept (83)
        on left: 0
    start (84)
        on left: 1
        on right: 0
    nested_id <text> (85)
        on left: 2 3
        on right: 2 9 113 230 234 255 257
    opt_var_access <text> (86)
        on left: 4 5
        on right: 7
    var <text> (87)
        on left: 7
        on right: 4 8 50 95 143 144 145
    $@1 (88)
        on left: 6
        on right: 7
    var_load <text> (89)
        on left: 8
        on right: 53
    type <text> (90)
        on left: 9
        on right: 127 128 139 218 219 226
    opt_array_type <text> (91)
        on left: 10 11
        on right: 9 10 115 116 127 128 135
    opt_array <text> (92)
        on left: 12 13
        on right: 7 12 50 78 93 99 103 115
    equality_operator <opcode> (93)
        on left: 14 15
        on right: 33 85
    order_operator <opcode> (94)
        on left: 16 17 18 19
        on right: 34 83
    shift_operator (95)
        on left: 20 21 22
        on right: 35
    multiplicative_operator <opcode> (96)
        on left: 23 24 25
        on right: 39 79
    additive_operator <opcode> (97)
        on left: 26 27
        on right: 38 81
    logical_operator <opcode> (98)
        on left: 28 29
        on right: 36
    bitwise_operator <opcode> (99)
        on left: 30 31 32
        on right: 37
    binary_operator (100)
        on left: 33 34 35 36 37 38 39
        on right: 105 109
    unary_operator <opcode> (101)
        on left: 40 41 42 43
        on right: 44
    opt_unary_operator <opcode> (102)
        on left: 44 45
        on right: 77 78
    unary_special_operator <num> (103)
        on left: 46 47
        on right: 95 106 144 145
    fn_call <text> (104)
        on left: 50
        on right: 54
    $@2 (105)
        on left: 48
        on right: 50
    $@3 (106)
        on left: 49
        on right: 50
    opt_var_fn_access (107)
        on left: 51 52
        on right: 54
    var_fn (108)
        on left: 53 54
        on right: 51 55 62
    val <text> (109)
        on left: 55 56 57 58 59 60 61
        on right: 77 110
    opt_string_access (110)
        on left: 62 63
        on right: 61
    assignment_operator <opcode> (111)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 141
    expression (112)
        on left: 76
        on right: 12 93 99 105 109 115 118 141 160 192
    unary_expression (113)
        on left: 77 78
        on right: 79 80
    multiplicative_expression (114)
        on left: 79 80
        on right: 79 81 82
    additive_expression (115)
        on left: 81 82
        on right: 81 83 84
    relational_expression (116)
        on left: 83 84
        on right: 83 85 86
    equality_expression (117)
        on left: 85 86
        on right: 85 87 88
    conjunctive_expression (118)
        on left: 87 88
        on right: 87 89 90
    disjunctive_expression (119)
        on left: 89 90
        on right: 76 78 89
    statement_s0 (120)
        on left: 92 93 94 95
        on right: 146
    $@4 (121)
        on left: 91
        on right: 92
    statement_s1 (122)
        on left: 96 98 99 100 103 104 105 106 107
        on right: 92 98
    $@5 (123)
        on left: 97
        on right: 98
    $@6 (124)
        on left: 101
        on right: 103
    $@7 (125)
        on left: 102
        on right: 103
    rhs (126)
        on left: 108 109
        on right: 110 111
    statement_s2 (127)
        on left: 110 111 112
        on right: 99 103
    new_expression (128)
        on left: 113
        on right: 94 117 142 191
    new_initialisation (129)
        on left: 114 115 116
        on right: 113
    assignable_expression (130)
        on left: 117 118
        on right: 119 121 131
    obligatory_args (131)
        on left: 119 121
        on right: 121 122
    $@8 (132)
        on left: 120
        on right: 121
    args (133)
        on left: 122 123
        on right: 50 103 114 116
    opt_variadic (134)
        on left: 124 125
        on right: 128
    obligatory_formal_args (135)
        on left: 127 128
        on right: 127 129
    $@9 (136)
        on left: 126
        on right: 127
    formal_args (137)
        on left: 129 130
        on right: 205 218
    opt_assignment (138)
        on left: 131 132
        on right: 135 198 202
    var_declaration_body (139)
        on left: 135
        on right: 136 137
    $@10 (140)
        on left: 133
        on right: 135
    $@11 (141)
        on left: 134
        on right: 135
    var_declarations (142)
        on left: 136 137
        on right: 96 100 136 139
    statement_declarative (143)
        on left: 139
        on right: 175
    $@12 (144)
        on left: 138
        on right: 139
    assignment (145)
        on left: 141 142
        on right: 104 108 143
    $@13 (146)
        on left: 140
        on right: 141
    assignment_statement (147)
        on left: 143
        on right: 170
    statement_pm_1 (148)
        on left: 144 145
        on right: 169
    statement (149)
        on left: 146 147 148 149 150 151 152 153 154
        on right: 157 161
    opt_statement_seq (150)
        on left: 155 156
        on right: 157 158 159 188
    statement_seq (151)
        on left: 157 158
        on right: 155
    block (152)
        on left: 159
        on right: 158 162 180 205 206 246
    condition (153)
        on left: 160
        on right: 167 175 178 180 181
    conditional_body (154)
        on left: 161 162
        on right: 163 167 168 175 178
    opt_else_statement (155)
        on left: 163 164
        on right: 167 168
    if_statement (156)
        on left: 167 168
        on right: 148
    $@14 (157)
        on left: 165
        on right: 167
    $@15 (158)
        on left: 166
        on right: 167
    for_updating_statement (159)
        on left: 169 170
        on right: 175
    for_statement (160)
        on left: 175
        on right: 147
    $@16 (161)
        on left: 171
        on right: 175
    $@17 (162)
        on left: 172
        on right: 175
    $@18 (163)
        on left: 173
        on right: 175
    $@19 (164)
        on left: 174
        on right: 175
    while_statement (165)
        on left: 178
        on right: 149
    $@20 (166)
        on left: 176
        on right: 178
    $@21 (167)
        on left: 177
        on right: 178
    do_while_statement (168)
        on left: 180
        on right: 150
    $@22 (169)
        on left: 179
        on right: 180
    switch_statement (170)
        on left: 181
        on right: 151
    case_val (171)
        on left: 182 183 184 185
        on right: 186
    switch_label (172)
        on left: 186 187
        on right: 188
    case_block (173)
        on left: 188
        on right: 189
    switch_body (174)
        on left: 189 190
        on right: 181 189
    opt_return_expression (175)
        on left: 191 192 193
        on right: 194
    return_statement (176)
        on left: 194
        on right: 152
    cls_modifier (177)
        on left: 195 196
        on right: 220 221 249 250
    cls_attr_more (178)
        on left: 198 199 200
        on right: 198 202
    $@23 (179)
        on left: 197
        on right: 198
    cls_attr_sign (180)
        on left: 202 205 206
        on right: 226
    $@24 (181)
        on left: 201
        on right: 202
    $@25 (182)
        on left: 203
        on right: 205
    $@26 (183)
        on left: 204
        on right: 205
    fn_access_modifier (184)
        on left: 207 208 209
        on right: 213 215
    fn_static_modifier (185)
        on left: 210
        on right: 211 216
    fn_opt_static_modifier (186)
        on left: 211 212
        on right: 215
    fn_opt_access_modifier (187)
        on left: 213 214
        on right: 216
    fn_modifier (188)
        on left: 215 216 217
        on right: 218 219 226
    fn_declaration (189)
        on left: 218 219
        on right: 224 243
    cls_declaration (190)
        on left: 220 221
        on right: 239 240
    cls_info_opt_more (191)
        on left: 222 223
        on right: 224 226 227
    cls_info (192)
        on left: 224 226 227
        on right: 222 228
    $@27 (193)
        on left: 225
        on right: 226
    opt_cls_info (194)
        on left: 228 229
        on right: 239 240
    opt_extends (195)
        on left: 230 231
        on right: 239
    more_interface_list (196)
        on left: 232 233
        on right: 234
    interface_list (197)
        on left: 234
        on right: 232 235 251
    opt_implements (198)
        on left: 235 236
        on right: 239
    opening_bracket (199)
        on left: 237
        on right: 159 239
    closing_bracket (200)
        on left: 238
        on right: 159 239
    cls_definition (201)
        on left: 239 240
        on right: 260
    opt_abstract (202)
        on left: 241 242
        on right: 243
    interface_info (203)
        on left: 243 244 245 246
        on right: 243 247
    opt_interface_info (204)
        on left: 247 248
        on right: 253 254
    interface_declaration (205)
        on left: 249 250
        on right: 253 254
    opt_interface_extends (206)
        on left: 251 252
        on right: 253
    interface_definition (207)
        on left: 253 254
        on right: 259
    opt_pkg_declaration (208)
        on left: 255 256
        on right: 263
    pkg_import (209)
        on left: 257 258
        on right: 257 263
    type_definitions (210)
        on left: 259 260
        on right: 261 263
    type_definitions_more (211)
        on left: 261 262
        on right: 259 260
    main_program (212)
        on left: 263
        on right: 1


State 0

    0 $accept: • start "end of file"

    "package"  shift, and go to state 1

    $default  reduce using rule 256 (opt_pkg_declaration)

    start                go to state 2
    opt_pkg_declaration  go to state 3
    main_program         go to state 4


State 1

  255 opt_pkg_declaration: "package" • nested_id ';'

    "identifier"  shift, and go to state 5

    nested_id  go to state 6


State 2

    0 $accept: start • "end of file"

    "end of file"  shift, and go to state 7


State 3

  263 main_program: opt_pkg_declaration • pkg_import type_definitions

    "import"  shift, and go to state 8

    $default  reduce using rule 258 (pkg_import)

    pkg_import  go to state 9


State 4

    1 start: main_program •

    $default  reduce using rule 1 (start)


State 5

    2 nested_id: "identifier" • '.' nested_id
    3          | "identifier" •

    '.'  shift, and go to state 10

    $default  reduce using rule 3 (nested_id)


State 6

  255 opt_pkg_declaration: "package" nested_id • ';'

    ';'  shift, and go to state 11


State 7

    0 $accept: start "end of file" •

    $default  accept


State 8

  257 pkg_import: "import" • nested_id ';' pkg_import

    "identifier"  shift, and go to state 5

    nested_id  go to state 12


State 9

  263 main_program: opt_pkg_declaration pkg_import • type_definitions

    PUBLIC  shift, and go to state 13

    $default  reduce using rule 196 (cls_modifier)

    cls_modifier           go to state 14
    cls_declaration        go to state 15
    cls_definition         go to state 16
    interface_declaration  go to state 17
    interface_definition   go to state 18
    type_definitions       go to state 19


State 10

    2 nested_id: "identifier" '.' • nested_id

    "identifier"  shift, and go to state 5

    nested_id  go to state 20


State 11

  255 opt_pkg_declaration: "package" nested_id ';' •

    $default  reduce using rule 255 (opt_pkg_declaration)


State 12

  257 pkg_import: "import" nested_id • ';' pkg_import

    ';'  shift, and go to state 21


State 13

  195 cls_modifier: PUBLIC •

    $default  reduce using rule 195 (cls_modifier)


State 14

  220 cls_declaration: cls_modifier • "class" "identifier"
  221                | cls_modifier • "class" error
  249 interface_declaration: cls_modifier • "interface" "identifier"
  250                      | cls_modifier • "interface" error

    "class"      shift, and go to state 22
    "interface"  shift, and go to state 23


State 15

  239 cls_definition: cls_declaration • opt_extends opt_implements opening_bracket opt_cls_info closing_bracket
  240               | cls_declaration • error '{' opt_cls_info '}'

    error      shift, and go to state 24
    "extends"  shift, and go to state 25

    "implements"  reduce using rule 231 (opt_extends)
    '{'           reduce using rule 231 (opt_extends)

    opt_extends  go to state 26


State 16

  260 type_definitions: cls_definition • type_definitions_more

    PUBLIC  shift, and go to state 13

    "end of file"  reduce using rule 262 (type_definitions_more)
    $default       reduce using rule 196 (cls_modifier)

    cls_modifier           go to state 14
    cls_declaration        go to state 15
    cls_definition         go to state 16
    interface_declaration  go to state 17
    interface_definition   go to state 18
    type_definitions       go to state 27
    type_definitions_more  go to state 28


State 17

  253 interface_definition: interface_declaration • opt_interface_extends '{' opt_interface_info '}'
  254                     | interface_declaration • error '{' opt_interface_info '}'

    error      shift, and go to state 29
    "extends"  shift, and go to state 30

    '{'  reduce using rule 252 (opt_interface_extends)

    opt_interface_extends  go to state 31


State 18

  259 type_definitions: interface_definition • type_definitions_more

    PUBLIC  shift, and go to state 13

    "end of file"  reduce using rule 262 (type_definitions_more)
    $default       reduce using rule 196 (cls_modifier)

    cls_modifier           go to state 14
    cls_declaration        go to state 15
    cls_definition         go to state 16
    interface_declaration  go to state 17
    interface_definition   go to state 18
    type_definitions       go to state 27
    type_definitions_more  go to state 32


State 19

  263 main_program: opt_pkg_declaration pkg_import type_definitions •

    $default  reduce using rule 263 (main_program)


State 20

    2 nested_id: "identifier" '.' nested_id •

    $default  reduce using rule 2 (nested_id)


State 21

  257 pkg_import: "import" nested_id ';' • pkg_import

    "import"  shift, and go to state 8

    $default  reduce using rule 258 (pkg_import)

    pkg_import  go to state 33


State 22

  220 cls_declaration: cls_modifier "class" • "identifier"
  221                | cls_modifier "class" • error

    error         shift, and go to state 34
    "identifier"  shift, and go to state 35


State 23

  249 interface_declaration: cls_modifier "interface" • "identifier"
  250                      | cls_modifier "interface" • error

    error         shift, and go to state 36
    "identifier"  shift, and go to state 37


State 24

  240 cls_definition: cls_declaration error • '{' opt_cls_info '}'

    '{'  shift, and go to state 38


State 25

  230 opt_extends: "extends" • nested_id

    "identifier"  shift, and go to state 5

    nested_id  go to state 39


State 26

  239 cls_definition: cls_declaration opt_extends • opt_implements opening_bracket opt_cls_info closing_bracket

    "implements"  shift, and go to state 40

    $default  reduce using rule 236 (opt_implements)

    opt_implements  go to state 41


State 27

  261 type_definitions_more: type_definitions •

    $default  reduce using rule 261 (type_definitions_more)


State 28

  260 type_definitions: cls_definition type_definitions_more •

    $default  reduce using rule 260 (type_definitions)


State 29

  254 interface_definition: interface_declaration error • '{' opt_interface_info '}'

    '{'  shift, and go to state 42


State 30

  251 opt_interface_extends: "extends" • interface_list

    "identifier"  shift, and go to state 5

    nested_id       go to state 43
    interface_list  go to state 44


State 31

  253 interface_definition: interface_declaration opt_interface_extends • '{' opt_interface_info '}'

    '{'  shift, and go to state 45


State 32

  259 type_definitions: interface_definition type_definitions_more •

    $default  reduce using rule 259 (type_definitions)


State 33

  257 pkg_import: "import" nested_id ';' pkg_import •

    $default  reduce using rule 257 (pkg_import)


State 34

  221 cls_declaration: cls_modifier "class" error •

    $default  reduce using rule 221 (cls_declaration)


State 35

  220 cls_declaration: cls_modifier "class" "identifier" •

    $default  reduce using rule 220 (cls_declaration)


State 36

  250 interface_declaration: cls_modifier "interface" error •

    $default  reduce using rule 250 (interface_declaration)


State 37

  249 interface_declaration: cls_modifier "interface" "identifier" •

    $default  reduce using rule 249 (interface_declaration)


State 38

  240 cls_definition: cls_declaration error '{' • opt_cls_info '}'

    "abstract"  shift, and go to state 46
    "static"    shift, and go to state 47
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49
    PROTECTED   shift, and go to state 50
    ';'         shift, and go to state 51

    '}'       reduce using rule 229 (opt_cls_info)
    $default  reduce using rule 217 (fn_modifier)

    fn_access_modifier  go to state 52
    fn_static_modifier  go to state 53
    fn_modifier         go to state 54
    cls_info            go to state 55
    opt_cls_info        go to state 56


State 39

  230 opt_extends: "extends" nested_id •

    $default  reduce using rule 230 (opt_extends)


State 40

  235 opt_implements: "implements" • interface_list

    "identifier"  shift, and go to state 5

    nested_id       go to state 43
    interface_list  go to state 57


State 41

  239 cls_definition: cls_declaration opt_extends opt_implements • opening_bracket opt_cls_info closing_bracket

    '{'  shift, and go to state 58

    opening_bracket  go to state 59


State 42

  254 interface_definition: interface_declaration error '{' • opt_interface_info '}'

    error       shift, and go to state 60
    "abstract"  shift, and go to state 61
    ';'         shift, and go to state 62

    "identifier"  reduce using rule 242 (opt_abstract)
    "static"      reduce using rule 242 (opt_abstract)
    PUBLIC        reduce using rule 242 (opt_abstract)
    PRIVATE       reduce using rule 242 (opt_abstract)
    PROTECTED     reduce using rule 242 (opt_abstract)
    '}'           reduce using rule 248 (opt_interface_info)

    opt_abstract        go to state 63
    interface_info      go to state 64
    opt_interface_info  go to state 65


State 43

  234 interface_list: nested_id • more_interface_list

    ','  shift, and go to state 66

    $default  reduce using rule 233 (more_interface_list)

    more_interface_list  go to state 67


State 44

  251 opt_interface_extends: "extends" interface_list •

    $default  reduce using rule 251 (opt_interface_extends)


State 45

  253 interface_definition: interface_declaration opt_interface_extends '{' • opt_interface_info '}'

    error       shift, and go to state 60
    "abstract"  shift, and go to state 61
    ';'         shift, and go to state 62

    "identifier"  reduce using rule 242 (opt_abstract)
    "static"      reduce using rule 242 (opt_abstract)
    PUBLIC        reduce using rule 242 (opt_abstract)
    PRIVATE       reduce using rule 242 (opt_abstract)
    PROTECTED     reduce using rule 242 (opt_abstract)
    '}'           reduce using rule 248 (opt_interface_info)

    opt_abstract        go to state 63
    interface_info      go to state 64
    opt_interface_info  go to state 68


State 46

  224 cls_info: "abstract" • fn_declaration ';' cls_info_opt_more

    "static"   shift, and go to state 47
    PUBLIC     shift, and go to state 48
    PRIVATE    shift, and go to state 49
    PROTECTED  shift, and go to state 50

    $default  reduce using rule 217 (fn_modifier)

    fn_access_modifier  go to state 52
    fn_static_modifier  go to state 53
    fn_modifier         go to state 69
    fn_declaration      go to state 70


State 47

  210 fn_static_modifier: "static" •

    $default  reduce using rule 210 (fn_static_modifier)


State 48

  208 fn_access_modifier: PUBLIC •

    $default  reduce using rule 208 (fn_access_modifier)


State 49

  207 fn_access_modifier: PRIVATE •

    $default  reduce using rule 207 (fn_access_modifier)


State 50

  209 fn_access_modifier: PROTECTED •

    $default  reduce using rule 209 (fn_access_modifier)


State 51

  227 cls_info: ';' • cls_info_opt_more

    "abstract"  shift, and go to state 46
    "static"    shift, and go to state 47
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49
    PROTECTED   shift, and go to state 50
    ';'         shift, and go to state 51

    '}'       reduce using rule 223 (cls_info_opt_more)
    $default  reduce using rule 217 (fn_modifier)

    fn_access_modifier  go to state 52
    fn_static_modifier  go to state 53
    fn_modifier         go to state 54
    cls_info_opt_more   go to state 71
    cls_info            go to state 72


State 52

  215 fn_modifier: fn_access_modifier • fn_opt_static_modifier

    "static"  shift, and go to state 47

    $default  reduce using rule 212 (fn_opt_static_modifier)

    fn_static_modifier      go to state 73
    fn_opt_static_modifier  go to state 74


State 53

  216 fn_modifier: fn_static_modifier • fn_opt_access_modifier

    PUBLIC     shift, and go to state 48
    PRIVATE    shift, and go to state 49
    PROTECTED  shift, and go to state 50

    $default  reduce using rule 214 (fn_opt_access_modifier)

    fn_access_modifier      go to state 75
    fn_opt_access_modifier  go to state 76


State 54

  226 cls_info: fn_modifier • type "identifier" $@27 cls_attr_sign cls_info_opt_more

    "identifier"  shift, and go to state 5

    nested_id  go to state 77
    type       go to state 78


State 55

  228 opt_cls_info: cls_info •

    $default  reduce using rule 228 (opt_cls_info)


State 56

  240 cls_definition: cls_declaration error '{' opt_cls_info • '}'

    '}'  shift, and go to state 79


State 57

  235 opt_implements: "implements" interface_list •

    $default  reduce using rule 235 (opt_implements)


State 58

  237 opening_bracket: '{' •

    $default  reduce using rule 237 (opening_bracket)


State 59

  239 cls_definition: cls_declaration opt_extends opt_implements opening_bracket • opt_cls_info closing_bracket

    "abstract"  shift, and go to state 46
    "static"    shift, and go to state 47
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49
    PROTECTED   shift, and go to state 50
    ';'         shift, and go to state 51

    '}'       reduce using rule 229 (opt_cls_info)
    $default  reduce using rule 217 (fn_modifier)

    fn_access_modifier  go to state 52
    fn_static_modifier  go to state 53
    fn_modifier         go to state 54
    cls_info            go to state 55
    opt_cls_info        go to state 80


State 60

  245 interface_info: error • ';'
  246               | error • block

    '{'  shift, and go to state 58
    ';'  shift, and go to state 81

    block            go to state 82
    opening_bracket  go to state 83


State 61

  241 opt_abstract: "abstract" •

    $default  reduce using rule 241 (opt_abstract)


State 62

  244 interface_info: ';' •

    $default  reduce using rule 244 (interface_info)


State 63

  243 interface_info: opt_abstract • fn_declaration ';' interface_info

    "static"   shift, and go to state 47
    PUBLIC     shift, and go to state 48
    PRIVATE    shift, and go to state 49
    PROTECTED  shift, and go to state 50

    $default  reduce using rule 217 (fn_modifier)

    fn_access_modifier  go to state 52
    fn_static_modifier  go to state 53
    fn_modifier         go to state 69
    fn_declaration      go to state 84


State 64
